--- a/.github/workflows/build-advanced.yml
+++ b/.github/workflows/build-advanced.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.27.0'
+        flutter-version: 'latest'
         channel: 'stable'
         
     # 可选：如果需要代码签名，请配置以下步骤
